--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="index.html"><i class="fas fa-home"></i> Home</a>
           <a class="nav-item nav-link" href="downloads.html"><i class="fa fa-cloud-download-alt"></i> Download</a>
-          <a class="nav-item nav-link" href="https://blog.ibislinux.or.id/" target="_blank"><i class="fa fa-blog"></i>
+          <a class="nav-item nav-link" href="#" target="_blank"><i class="fa fa-blog"></i>
             Blog</a>
           <a class="nav-item nav-link" href="community.html"><i class="fa fa-users"></i> Community</a>
           <a class="nav-item nav-link" href="faq.html"><i class="fa fa-question"></i> F.A.Q</a>
